compeleted shuffle function, start and stop function, but stuck on flipping card

--- a/css/style.css
+++ b/css/style.css
@@ -9,20 +9,31 @@ body{
 .container{
     display:flex;
     align-items: center;
-}
-.board{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-gap: 10px;
-    max-width: 600px;
-    margin: 20px;    
+    flex-direction: column;
 }
 
-.card{
+.deck{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 10px;   
+}
+
+
+.card {
     width: 100px;
     height: 100px;
+    background-color: #f2f2f2;
+    border: 1vmin solid #f2f2f2;
     border-radius: 5px;
-}
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .card img {
+    max-width: 100%;
+    max-height: 100%;
+  }
 
 button {
     justify-self: center;
